Fix dark mode CSS

--- a/src/inc/themes/dark-mode/style.scss
+++ b/src/inc/themes/dark-mode/style.scss
@@ -221,7 +221,7 @@ $inner_space: 1em;
 			@media( max-width: $small_screen_width ) {
 				left: 0;
 				top: 0;
-				// top: 50%;
+				bottom: 50%;
 			}
 
 		}		
@@ -239,7 +239,7 @@ $inner_space: 1em;
 			}
 			@media( max-width: $small_screen_width ) {
 				left: 0;
-				top: 0;
+				top: 40px;
 				bottom: 50%;
 			}
 
@@ -883,11 +883,11 @@ $inner_space: 1em;
 				}
 				@media( max-width: $small_screen_width ) {
 					position: absolute;
-					top: 40px;
+					top: 0;
 					bottom: 0;
 					left: 0;
 					right: 0;
-					height: calc(100% - 40px);
+					height: 100%;
 					box-shadow: 0 5px 11px rgba(0, 0, 0, 0.2);
 				}				
 			}
@@ -1161,6 +1161,7 @@ body.configurator_is_inline .mkl_pc {
 
 		.mkl_pc_toolbar > header {
 			@media( max-width: $small_screen_width ) {
+				display: none;
 				position: relative;
 				left: 0;
 				top: 0;
@@ -1168,6 +1169,11 @@ body.configurator_is_inline .mkl_pc {
 				height: 40px;
 			}		
 		}
+
+		.mkl_pc_viewer {
+			top: 0;
+		}
+
 		.cancel {
 			display: none;
 		}
